--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "binary-pack": "0.0.3",
+    "browserify": "^10.2.4",
     "compression": "^1.0.3",
     "debug": "^2.1.3",
     "duplex": "^1.0.0",
