--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strong-pubsub-angular-loopback",
+  "name": "loopback-example-pubsub",
   "version": "1.0.0",
   "main": "server/server.js",
   "scripts": {
