Update app to have latest standard scaffolding #9

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "strong-pubsub-proxy": "^0.1.0"
   },
   "optionalDependencies": {
-    "loopback-explorer": "^1.1.0"
+    "loopback-component-explorer": "^2.1.0"
   },
   "devDependencies": {
     "browserify": "^11.0.1",
