--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "server/server.js",
   "scripts": {
-    "pretest": "jshint ."
+    "pretest": "jshint .",
+    "start": "node server/server",
+    "test": "mocha"
   },
   "dependencies": {
     "binary-pack": "0.0.3",
@@ -29,11 +31,12 @@
     "gulp": "^3.8.11",
     "gulp-loopback-sdk-angular": "^0.1.3",
     "gulp-rename": "^1.2.2",
-    "jshint": "^2.5.6"
+    "jshint": "^2.5.6",
+    "mocha": "^2.3.4"
   },
   "repository": {
-    "type": "",
-    "url": ""
+    "type": "git",
+    "url": "https://github.com/strongloop/loopback-example-pubsub"
   },
   "description": "strong-pubsub-angular-loopback",
   "license": "MIT"
