--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "debug": "^2.1.3",
     "duplex": "^1.0.0",
     "engine.io": "^1.5.1",
-    "errorhandler": "^1.1.1",
-    "loopback": "^2.8.0",
+    "strong-error-handler": "^1.1.0",
+    "loopback": "^3.0.0",
     "loopback-boot": "^2.4.0",
-    "loopback-datasource-juggler": "^2.7.0",
     "primus": "2.4.12",
     "serve-favicon": "^2.0.1",
     "strong-pubsub": "^0.1.0",
