--- a/server/config.json
+++ b/server/config.json
@@ -17,12 +17,7 @@
       "extended": true,
       "limit": "100kb"
     },
-    "cors": {
-      "origin": true,
-      "credentials": true
-    },
-    "errorHandler": {
-      "disableStackTrace": false
-    }
+    "cors": false,
+    "handleErrors": false
   }
 }
